k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-ingestion
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-processing
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-data-ml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-test
